# shake-rules

./: .gitignore  Build.hs  INSTALL.md  LICENSE  README.md  shake-rules.cabal
doc/installation/mswindows/: wsl.md
doc/tips/: generating-sequences-of-files.md
examples/sequences/comprehension/: Build.hs
examples/sequences/liftA2/: Build.hs
examples/sequences/map/: Build.hs
scripts/: 3to2.awk
src/Development/Shake/: Binary.hs  Clean.hs  Compile.hs  Gmsh.hs  LaTeX.hs
