name:                shake-rules
version:             0.4.0.0
synopsis:            Handy extras for using Shake
-- description:
homepage:            https://github.com/gdmcbain/shake-rules
license:             BSD3
license-file:        LICENSE
author:              G. D. McBain <gdmcbain@protonmail.com>
maintainer:          G. D. McBain <gdmcbain@protonmail.com>
copyright:           G. D. McBain 2017-2018
category:            Development, Shake
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
bug-reports: https://github.com/gdmcbain/shake-rules/issues
        
source-repository head
  type:     git
  location: https://github.com/gdmcbain/shake-rules.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , shake
  exposed-modules:
      Development.Shake.Binary
      Development.Shake.Clean
      Development.Shake.Compile
      Development.Shake.Gmsh
      Development.Shake.LaTeX
